<resources>
    <string name="app_name">TvApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email address</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender: M/F</string>
    <string name="get_otp">Get OTP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wv_tv_title">WV TV</string>
    <string name="log_in">LOG IN</string>
    <string name="registration">REGISTRATION</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="change_password">Change Password</string>
    <string name="update_password">Update Password</string>
    <string name="otp_sent_to_mobile_number">A 6 digit OTP has been sent to your registered mobile number</string>
    <string name="six_digit_code">6 digit code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">SAVE</string>
    <string name="channels">Channels</string>
    <string name="short_films">Short Films</string>
    <string name="shows">Shows</string>
</resources>
